# paw-tech-initiative

./: .gitignore  README.md  nx.json  package-lock.json  package.json  tsconfig.json
apps/pet-adoption-db/: Dockerfile  README.md  docker-compose.yml  jest.config.ts  package-lock.json  package.json  project.json  pyproject.toml  requirements.txt
apps/pet-adoption-db/.astro/: config.yaml  dag_integrity_exceptions.txt
apps/pet-adoption-db/dags/: exampleDag.py  fetchLongBeachData.py  fetchPetFinderData.py  fetchRescuegroupData.py  fetch_long_beach_data.py  fetch_pet_finder_data.py  fetch_rescue_group_data.py  loadCsvData.py  load_csv_data.py  transform_fetch_data.py
apps/pet-adoption-db/dags/utils/: client_utils.py  db_client.py  mapping_utils.py  pet_finder_client.py  recuse_groups_client.py  transform_data_utils.py
apps/pet-adoption-db/dags/utils/clients/api_clients/: pet_finder.py  recuse_groups.py
apps/pet-adoption-db/dags/utils/clients/db_clients/: db.py  db_client.py
apps/pet-adoption-db/dags/utils/clients/db_clients/dbs/: animal.py  attribute.py  (+4 more)
apps/pet-adoption-db/docs/: projectUpdate.html  projectUpdate.rmd
apps/pet-adoption-db/include/: adoptable_pets_catalog.csv  long_beach_example.json  pet_finder_organization_response.json  recuse_groups_organization_response.json
apps/pet-adoption-db/proposal/: proposal.html  proposal.rmd
apps/pet-adoption-db/quires/: tables.sql
apps/pet-adoption-db/scripts/: createConnections.py  importShelterData.ts  pullCsv.py
apps/pet-adoption-db/supabase/: config.toml
apps/pet-adoption-db/terraform/: main.tf
(+8 files in other folders)
