[tool.poetry]
name = "pet-adoption-db"
version = "0.1.0"
description = "A Python project for pet adoption database"
authors = ["Your Name <ozborne132@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
